import {Entity, model, property, hasOne} from '@loopback/repository';
import {Billing} from './billing.model';

@model()
export class Transaction extends Entity {
  @property({
    type: 'string',
    id: true,
    generated: true,
  })
  transaction_id?: string;

  @property({
    type: 'string',
    required: true,
  })
  user_id: string;

  @property({
    type: 'number',
  })
  totalCost: number;

  @property({
    type: 'string',
  })
  billing_id?: string;

  @hasOne(() => Billing, {keyTo: 'transaction_id'})
  billing: Billing;

  constructor(data?: Partial<Transaction>) {
    super(data);
  }
}

export interface TransactionRelations {
  // describe navigational properties here
}

export type TransactionWithRelations = Transaction & TransactionRelations;
