@startuml ecommerceERD

skinparam linetype ortho

entity User {
    *id: ObjectId <<generated>>
    --
    *name: String
    *password: String
    address: String
    email: String
    gender: String
    role:Role

}

enum Role {
    Admin
    Customer
    Agency
}


entity Transaction {
    *transaction_id: ObjectId <<generated>>
    --
    *user_id:ObjectId <<FK>>
    *billing_id:ObjectId <<FK>>
    --
    *totalCost:Number
}

entity Product {
    *product_id: ObjectId <<generated>>
    --
    *card_id: ObjectId <<FK>>
    *user_id: ObjectId <<FK>>
    --
    *name: String
    *price: Number
}
entity Cart {
    *id: ObjectId <<generated>>
    --
    *user_id: ObjectId <<FK>>

}

entity Billing{
    *billing_id: ObjectId <<generated>>
    --
    *cart_id: ObjectId <<FK>>
    --
    *totalCost:Number
    *payment:Number
}


User ||--|{ Transaction
Transaction ||--|| Billing
Billing||--|| Cart

User ||--|| Cart
Cart ||--|{ Product
User ||--|{ Product
@enduml